' Generated by UML Generator
' Encoded: XP8nKyCm38Lt_mgFBfnxp1rwxGORrmmC78DggucEn0cs0tUq_UyeIN4R2cIqtjCdoy-h4C77jYf5U2NNW8TAcX92MCVeQTj6V32ro-WJvPqeoA8qv4s9Gf2Bw7TWKDxN9SgzaF8snxW1IsrGiuLaWpWAqTFafcwTJKRjUzVWuQFkcfD5NQYpNx5Ssr4Cgi5yCQ0VCMTjMtCxk1zZMPkOoexfeGcQlRNWCL4_oCPY34qETHQ_eKzTvM_csaB33pkW-_sIT8q_cTNODtNz0ffJNdjEFv8voWh8AV0vxvznxYv_Vk6szvfirtSERpu_BFkyHxLbUcTnjOVMX__a6wql5boXi_mNlm0
' URL: http://www.plantuml.com/plantuml/uml/XP8nKyCm38Lt_mgFBfnxp1rwxGORrmmC78DggucEn0cs0tUq_UyeIN4R2cIqtjCdoy-h4C77jYf5U2NNW8TAcX92MCVeQTj6V32ro-WJvPqeoA8qv4s9Gf2Bw7TWKDxN9SgzaF8snxW1IsrGiuLaWpWAqTFafcwTJKRjUzVWuQFkcfD5NQYpNx5Ssr4Cgi5yCQ0VCMTjMtCxk1zZMPkOoexfeGcQlRNWCL4_oCPY34qETHQ_eKzTvM_csaB33pkW-_sIT8q_cTNODtNz0ffJNdjEFv8voWh8AV0vxvznxYv_Vk6szvfirtSERpu_BFkyHxLbUcTnjOVMX__a6wql5boXi_mNlm0
' Generated on: 2025-11-27T12:42:37.263226451

@startuml
skinparam classAttributeIconSize 0
hide circle

interface Hole {
  +getRadius(): int
}

class RoundHole {
  -radius: int
  --
  +RoundHole(radius: int)
  +getRadius(): int
  +fits(peg: RoundPeg): boolean
}

class RoundPeg {
  -radius: int
  --
  +RoundPeg(radius: int)
  +getRadius(): int
}

class SquarePeg {
  -width: int
  --
  +SquarePeg(width: int)
  +getWidth(): int
}

class SquarePegAdapter {
  -peg: SquarePeg
  --
  +SquarePegAdapter(peg: SquarePeg)
  +getRadius(): int
}

class Shape {
  +{static} main(args: String[]): void
}

RoundHole ..|> Hole
RoundHole ..> RoundPeg
SquarePegAdapter --|> RoundPeg
SquarePegAdapter *-- SquarePeg
@enduml